[package]
name = "rust-pulsectl"
version = "0.2.12"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2021"
license = "GPL-3.0+"
description = "A higher level API for libpulse_binding"
readme = "README.md"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
homepage = "https://github.com/krruzic/pulsectl"
repository = "https://github.com/krruzic/pulsectl"

[lib]
name = "pulsectl"
path = "src/lib.rs"

[dependencies]
libpulse-binding = { git = "https://github.com/rustdesk-org/pulse-binding-rust", package = "libpulse-binding" }
